--- a/homework/2021-41/e10-e13/e10.html
+++ b/homework/2021-41/e10-e13/e10.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <button>Click</button>
+  
+
   <body>
+    <button>Click</button>
+    <p>Create an application where you have on button. When pressing the button a new `<p>hello world</p>` is created to the web page
+</p>
     <script>
       let button = document.querySelector("button");
       button.addEventListener("click", (event) => {
