--- a/homework/2021-41/e10-e13/e11.html
+++ b/homework/2021-41/e10-e13/e11.html
@@ -7,11 +7,15 @@
     <title>Document</title>
   </head>
 
-  <ul>
-    <li>hello</li>
-  </ul>
-  <button>Click me</button>
   <body>
+    <ul>
+      <li>hello</li>
+    </ul>
+    <button>Click me</button>
+    <p>
+      Create an application where you have a list (ul li hello li> ul). Create a
+      button that will add new li hello li to the list.
+    </p>
     <script>
       let button = document.querySelector("button");
       button.addEventListener("click", (event) => {
